--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" src="global.css"></ㅣ>
   </head>
-  <body></body>
+  <body style="margin:0;padding:0;display:flex;justify-content: center;align-items: center;height:100vh;scale: 1;" onresize="parent.resizeTo(500,400)" onload="parent.resizeTo(500,400)">
+    <script src="node_modules/p5/lib/p5.min.js"></script>
+    <script src="sketch.js"></script>
+  </body>
 </html>
