--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" src="global.css"></ㅣ>
   </head>
   <body style="margin:0;padding:0;display:flex;justify-content: center;align-items: center;height:100vh;scale: 1;" onresize="parent.resizeTo(500,400)" onload="parent.resizeTo(500,400)">
-    <script src="node_modules/p5/lib/p5.min.js"></script>
+    <script src="p5.min.js"></script>
     <script src="sketch.js"></script>
   </body>
 </html>
