--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" src="global.css"></ㅣ>
   </head>
-  <body style="margin:0;padding:0;display:flex;justify-content: center;align-items: center;height:100vh;scale: 1;" onresize="parent.resizeTo(500,400)" onload="parent.resizeTo(500,400)">
+  <body style="margin:0;padding:0;display:flex;justify-content: center;align-items: center;height:415;scale: 1;" onresize="parent.resizeTo(500,400)" onload="parent.resizeTo(500,400)">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.5.0/p5.min.js"></script>
     <script src="sketch.js"></script>
   </body>
